# pyproject-scaffold

./: .gitignore  README.md  pyproject.toml
src/pyproject_scaffold/: main.py
src/pyproject_scaffold/static/: pyproject.toml
