[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "pyproject-scaffold"
version = "0.1.0"
dependencies = ["tomlkit"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pyfakefs",
]

[project.scripts]
pyproject-scaffold = "pyproject_scaffold.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
